--- a/web-app/src/app/features/champions/champions.component.html
+++ b/web-app/src/app/features/champions/champions.component.html
@@ -10,6 +10,8 @@
       <option [value]="450">ARAM</option>
       <option [value]="400">Draft Pick, 5's</option>
       <option [value]="430">Blind Pick, 5's</option>
+      <option [value]="460">Blind Pick, 3's</option>
+      <option [value]="470">Ranked Pick, 3's</option>
       <option [value]="960">The Teemoing</option>
       <option [value]="950">The Teemoing - Level 100</option>
       <option [value]="1000">Project - Overdrive</option>
