--- a/web-app/src/styles.scss
+++ b/web-app/src/styles.scss
@@ -228,3 +228,9 @@ app-champion-image {
   max-width: 600px;
   text-align: left;
 }
+
+app-loading-spinner {
+  width: 100%;
+  text-align: center;
+  display: block;
+}
