STAT-35: Updating some areas to better handle item build analysis

--- a/web-app/src/app/features/champions/champions.component.html
+++ b/web-app/src/app/features/champions/champions.component.html
@@ -16,6 +16,7 @@
       <option [value]="950">The Teemoing - Level 100</option>
       <option [value]="1000">Project - Overdrive</option>
       <option [value]="1010">Snow Battle - ARURF</option>
+      <option [value]="1020">One for All, 5's</option>
     </select>
   </div>
   <div class="criteria-item col-md-3">
